--- a/index.html
+++ b/index.html
@@ -1,49 +1,70 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links</title>
+    <title>pwned</title>
 </head>
+
 <body>
-    <p align="left">
-        <p float="left">
-          <samp>
-            hi y'all :D<br>
-            <br>
-            - call me Pão (/pɐ̃w̃/)<br>
-            - they/them;<br>
-            - brazillian;<br>
-            - pt_br, en_us, de;<br>
-            <br>
-            - a big curious 'n self-learner;<br>
-            - network engineering student at <a href="https://portal.ifma.edu.br/instituto">IF</a>;<br>
-            - self-taught in computer engineering (kind of);<br>
-            - enrolled at <a href="https://www.linkedin.com/school/incode-tech-school">INCODE Tech School</a>;<br>
-            <br>
-            - computers, coffee, tea, retro things;<br>
-            - pixel art, hacking cult, music, unix;<br>
-            - foss, floss, oss, libre or whatever;<br>
-            <br>
-            - back-end, devops, infra;<br>
-            <br>
-            - ubuntu, windows, debian;<br>
-            - mint, arch(main), suse, mx;<br>
-            <br>
-            - git, github, codeberg, gitlab, docker;<br>
-            - proxmox, prometheus, grafana, nginx;<br>
-            <br>
-            - bash, lua, python, c++, js, ts, java, rusto;<br>
-            - nix, markdown, latex, ansible, pring;<br>
-            <br>
-            <a href="https://discordapp.com/users/242367322478739456">discord</a>
-              <a href="https://bsky.app/profile/paodelonga.bsky.social">bsky</a>
-              <a href="mailto:paodelonga@proton.me">mail</a>
-              <a href="https://wakatime.com/@018edc77-7a24-4632-bd86-c0736313ea21">wakatime</a>
-              <a href="https://linkedin.com/in/paodelonga">linkedin</a><br>
-            <br>
-            source on <a href="https://github.com/paodelonga/paodelonga.github.io">github</a><br>
-          </samp>
-        </p>
-      </p>
+    <div align="left">
+        <div align="center">
+            <p align="left">
+                <strong>
+                    <samp>「 ┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄&nbsp;&nbsp;</samp>
+                </strong>
+            </p>
+            <!--  -->
+            <p align="left">
+                <samp>
+                    &nbsp; hi y'all :D<br>
+                    <br>
+                    &nbsp; - call me Pão (/pɐ̃w̃/)<br>
+                    &nbsp; - they/them;<br>
+                    &nbsp; - brazillian;<br>
+                    &nbsp; - pt_br, en_us, de;<br>
+                    <br>
+                    &nbsp; - a big curious 'n self-learner;<br>
+                    &nbsp; - network engineering student at <a href="https://portal.ifma.edu.br/instituto">IF</a>;<br>
+                    &nbsp; - self-taught in computer engineering (kind of);<br>
+                    &nbsp; - enrolled at <a href="https://www.linkedin.com/school/incode-tech-school">INCODE Tech
+                        School</a>;<br>
+                    <br>
+                    &nbsp; - computers, coffee, tea, retro things;<br>
+                    &nbsp; - pixel art, hacking cult, music, unix;<br>
+                    &nbsp; - foss, floss, oss, libre or whatever;<br>
+                    <br>
+                    &nbsp; - back-end, devops, infra;<br>
+                    <br>
+                    &nbsp; - ubuntu, windows, debian;<br>
+                    &nbsp; - mint, arch(main), suse, mx;<br>
+                    <br>
+                    &nbsp; - git, github, codeberg, gitlab, docker;<br>
+                    &nbsp; - proxmox, prometheus, grafana, nginx;<br>
+                    <br>
+                    &nbsp; - bash, lua, python, c++, js, ts, java, rusto;<br>
+                    &nbsp; - nix, markdown, latex, ansible, pring;<br>
+                    <br>
+                    &nbsp; - pfp is a <a href="https://picrew.me/en/image_maker/2384161">picrew</a> by <a
+                        href="https://www.instagram.com/rayvpng_/">@rayvpng_</a><br>
+                    &nbsp; - banner is from Granite Waves by <a href="https://www.instagram.com/tezeze_art">@tezeze</a>
+            </p>
+            <!--  -->
+            <p align="left">
+                <strong>
+                    <samp>&nbsp;&nbsp;┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄┈┄ 」</samp>
+                </strong>
+            </p>
+        </div>
+        <samp>
+            <a href="https://discordapp.com/users/242367322478739456">discord</a> •
+            <a href="https://bsky.app/profile/paodelonga.bsky.social">bsky</a> •
+            <a href="mailto:paodelonga@proton.me">mail</a> •
+            <a href="https://wakatime.com/@018edc77-7a24-4632-bd86-c0736313ea21">wakatime</a> •
+            <a href="https://linkedin.com/in/paodelonga">linkedin</a> •
+            <a href="https://github.com/paodelonga/paodelonga.github.io">source</a>
+        </samp>
+    </div>
 </body>
+
 </html>
