--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <br>
                     &nbsp; - pfp is a <a href="https://picrew.me/en/image_maker/2384161">picrew</a> by <a
                         href="https://www.instagram.com/rayvpng_/">@rayvpng_</a><br>
+                </samp>
             </p>
         </div>
         <samp>
