adiciona mais links
Signed-off-by: paodelonga <72471292+paodelonga@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -13,35 +13,35 @@
             <!--  -->
             <p align="left">
                 <samp>
-                    &nbsp; hi y'all :D<br>
+                    hi y'all :D<br>
                     <br>
-                    &nbsp; - call me Pão (/pɐ̃w̃/)<br>
-                    &nbsp; - they/them;<br>
-                    &nbsp; - brazillian;<br>
-                    &nbsp; - pt_br, en_us, de;<br>
+                    - call me Pão (/pɐ̃w̃/)<br>
+                    - they/them;<br>
+                    - brazillian;<br>
+                    - pt_br, en_us, de;<br>
                     <br>
-                    &nbsp; - a big curious 'n self-learner;<br>
-                    &nbsp; - network engineering student at <a href="https://portal.ifma.edu.br/instituto">IF</a>;<br>
-                    &nbsp; - self-taught in computer engineering (kind of);<br>
-                    &nbsp; - enrolled at <a href="https://www.linkedin.com/school/incode-tech-school">INCODE Tech
+                    - a big curious 'n self-learner;<br>
+                    - network engineering student at <a href="https://portal.ifma.edu.br/instituto">IF</a>;<br>
+                    - self-taught in computer engineering (kind of);<br>
+                    - enrolled at <a href="https://www.linkedin.com/school/incode-tech-school">INCODE Tech
                         School</a>;<br>
                     <br>
-                    &nbsp; - computers, coffee, tea, retro things;<br>
-                    &nbsp; - pixel art, hacking cult, music, unix;<br>
-                    &nbsp; - foss, floss, oss, libre or whatever;<br>
+                    - computers, coffee, tea, retro things;<br>
+                    - pixel art, hacking cult, music, unix;<br>
+                    - foss, floss, oss, libre or whatever;<br>
                     <br>
-                    &nbsp; - back-end, devops, infra;<br>
+                    - back-end, devops, infra;<br>
                     <br>
-                    &nbsp; - ubuntu, windows, debian;<br>
-                    &nbsp; - mint, arch(main), suse, mx;<br>
+                    - ubuntu, windows, debian;<br>
+                    - mint, arch(main), suse, mx;<br>
                     <br>
-                    &nbsp; - git, github, codeberg, gitlab, docker;<br>
-                    &nbsp; - proxmox, prometheus, grafana, nginx;<br>
+                    - git, github, codeberg, gitlab, docker;<br>
+                    - proxmox, prometheus, grafana, nginx;<br>
                     <br>
-                    &nbsp; - bash, lua, python, c++, js, ts, java, rusto;<br>
-                    &nbsp; - nix, markdown, latex, ansible, pring;<br>
+                    - bash, lua, python, c++, js, ts, java, rusto;<br>
+                    - nix, markdown, latex, ansible, pring;<br>
                     <br>
-                    &nbsp; - pfp is a <a href="https://picrew.me/en/image_maker/2384161">picrew</a> by <a
+                    - pfp is a <a href="https://picrew.me/en/image_maker/2384161">picrew</a> by <a
                         href="https://www.instagram.com/rayvpng_/">@rayvpng_</a><br>
                 </samp>
             </p>
@@ -51,8 +51,13 @@
             <a href="https://bsky.app/profile/paodelonga.bsky.social">bsky</a> •
             <a href="mailto:paodelonga@proton.me">mail</a> •
             <a href="https://wakatime.com/@018edc77-7a24-4632-bd86-c0736313ea21">wakatime</a> •
-            <a href="https://linkedin.com/in/paodelonga">linkedin</a> •
-            <a href="https://github.com/paodelonga/paodelonga.github.io">source</a>
+            <a href="https://linkedin.com/in/paodelonga">linkedin</a>
+            <br>
+            <a href="https://github.com/paodelonga">github</a> •
+            <a href="https://gitlab.com/paodelonga">gitlab</a> •
+            <a href="https://lattes.cnpq.br/2504246587447998">lattes</a> •
+            <a href="https://orcid.org/0009-0002-6410-7790">orcid</a> •
+            <a href="https://github.com/paodelonga.github.io">source here</a>
         </samp>
     </div>
 </body>
