fix: esqueci do user
Signed-off-by: paodelonga <72471292+paodelonga@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="https://gitlab.com/paodelonga">gitlab</a> •
             <a href="https://lattes.cnpq.br/2504246587447998">lattes</a> •
             <a href="https://orcid.org/0009-0002-6410-7790">orcid</a> •
-            <a href="https://github.com/paodelonga.github.io">source here</a>
+            <a href="https://github.com/paodelonga/paodelonga.github.io">source here</a>
         </samp>
     </div>
 </body>
