ref: remove some stuffs
Signed-off-by: paodelonga <72471292+paodelonga@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
                     hi y'all :D<br>
                     <br>
                     - call me Pão (/pɐ̃w̃/)<br>
-                    - they/them;<br>
                     - brazillian;<br>
                     - pt_br, en_us, de;<br>
                     <br>
                     - a big curious 'n self-learner;<br>
-                    - network engineering student at <a href="https://portal.ifma.edu.br/instituto">IF</a>;<br>
+                    - network engineering student at <a href="https://portal.ifma.edu.br/">IF</a>;<br>
                     - self-taught in computer engineering (kind of);<br>
-                    - enrolled at <a href="https://www.linkedin.com/school/incode-tech-school">INCODE Tech
-                        School</a>;<br>
                     <br>
                     - computers, coffee, tea, retro things;<br>
                     - pixel art, hacking cult, music, unix;<br>
@@ -40,9 +37,6 @@
                     <br>
                     - bash, lua, python, c++, js, ts, java, rusto;<br>
                     - nix, markdown, latex, ansible, pring;<br>
-                    <br>
-                    - pfp is a <a href="https://picrew.me/en/image_maker/2384161">picrew</a> by <a
-                        href="https://www.instagram.com/rayvpng_/">@rayvpng_</a><br>
                 </samp>
             </p>
         </div>
@@ -51,12 +45,9 @@
             <a href="https://bsky.app/profile/paodelonga.bsky.social">bsky</a> •
             <a href="mailto:paodelonga@proton.me">mail</a> •
             <a href="https://wakatime.com/@018edc77-7a24-4632-bd86-c0736313ea21">wakatime</a> •
-            <a href="https://linkedin.com/in/paodelonga">linkedin</a>
             <br>
             <a href="https://github.com/paodelonga">github</a> •
             <a href="https://gitlab.com/paodelonga">gitlab</a> •
-            <a href="https://lattes.cnpq.br/2504246587447998">lattes</a> •
-            <a href="https://orcid.org/0009-0002-6410-7790">orcid</a> •
             <a href="https://github.com/paodelonga/paodelonga.github.io">source here</a>
         </samp>
     </div>
