feat: bluesky handle
Signed-off-by: paodelonga <72471292+paodelonga@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <samp>
             <a href="https://discordapp.com/users/242367322478739456">discord</a> •
-            <a href="https://bsky.app/profile/paodelonga.bsky.social">bsky</a> •
+            <a href="https://bsky.app/profile/paodelonga.github.io">bsky</a> •
             <a href="mailto:paodelonga@proton.me">mail</a> •
             <a href="https://wakatime.com/@018edc77-7a24-4632-bd86-c0736313ea21">wakatime</a> •
             <br>
