--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirecting</title>
-    <meta http-equiv="refresh" content="1; URL=https://bsky.app/profile/paodelonga.github.io" />
+    <meta http-equiv="refresh" content="1; URL=https://bsky.app/profile/did:plc:u5kccddixrftqcmrqtndffbz" />
   </head>
   <body></body>
 </html>
