--- a/linker.html
+++ b/linker.html
@@ -48,6 +48,7 @@
             <br>
             <a href="https://github.com/paodelonga">github</a> •
             <a href="https://gitlab.com/paodelonga">gitlab</a> •
+            <a href="https://instagram.com/ilvntss">photos</a> •
             <a href="https://github.com/paodelonga/paodelonga.github.io">source here</a>
         </samp>
     </div>
